feature: add chapter 1 solution doc: update documentation chore(gradle): update gradle wrapper version
